Version 1.4.6 (??/??/????) 
  * Fixed a bug where the initial values of net local variables were being double-quoted 
    at engine export time. This is especially problematic for initial values of complex-type 
    variables. 
  * Fixed a bug where the deletion of a varaible in one task would cause the deletion of 
    XQueries in unrelated tasks whose decompositions contained equivalent variables to the 
    one deleted.

Version 1.4.5 (27/04/2007) "Blobby"
  * The editor has been upgraded to now use Engine Beta 8.2.
  * The editor has been upgraded to now use Jgraph 5.9.2.1.
  * Enhanced the editor so that it no longer specifically needs the flow button 
    on the palette. Now, so long as you have a task or condition button depressed,
    flows can be drawn simply by hovering over an element's valid ports and dragging
    between elements. You will now drag elements instead of creating new ones when
    left-clicking an exisiting element on the net. 
  * Now, when a user selects a single task, the palette menu expands to allow the use to modify the
    split and join decorators for the task, without having to go to the popup menu for the task.
  * Fixed a bug where a graph that was scaled would stop the user from being able to draw flows between elements.
  * Now, on the label Element dialog, hitting enter in the label field will do the same as pressing the done button. 
    This is a user convenience for quickly making label changes.
  * The upgrade to 5.9.2 of JGraph broke certain cut and paste behaviour.  This is now fixed to work with the 
    latest JGraph.
  * Altered how text is positioned with respect to the graphs upon export to PNG, JPG and print jobs.  The text
    should now appear above the graph without writing over the top of it.
  * Save files are now saved to a temporary file first and then copied to the final specified file name. If there is
    an editor crash whilst saving, only the temporary file will be corrupted.