@@ -220,6 +220,7 @@ public class AvailableEngineProxyImplementation implements
   }
   
   public void setDataTypeSchema(String schema) {
+    // System.out.println("Setting Data Type Schema with:\n-----\n\n" + schema);
     try {
       xmlTools = new XMLToolsForYAWL();
       xmlTools.setPrimarySchema(schema); 
