@@ -2,9 +2,12 @@ Version 1.4.6 (??/??/????)
   * Fixed a bug where the initial values of net local variables were being double-quoted 
     at engine export time. This is especially problematic for initial values of complex-type 
     variables. 
-  * Fixed a bug where the deletion of a varaible in one task would cause the deletion of 
+  * Fixed a bug where the deletion of a variable in one task would cause the deletion of 
     XQueries in unrelated tasks whose decompositions contained equivalent variables to the 
     one deleted.
+  * Fixed a bug where the Net Variable dialog was incorectly attempting to validate the 
+    initial values of local net variables when the dialog itself was only partially 
+    initialised in preparation for display.
 
 Version 1.4.5 (27/04/2007) "Blobby"
   * The editor has been upgraded to now use Engine Beta 8.2.
